--- a/index.html
+++ b/index.html
@@ -622,22 +622,22 @@
             
             <div class="photo-wall">
                 <div class="photo-item" onclick="showEgg()">
-                    <img src="img/1.jpg" alt="朋友照片1">
+                    <img src="1.jpg" alt="朋友照片1">
                 </div>
                 <div class="photo-item">
-                    <img src="img/2.jpg" alt="朋友照片2">
+                    <img src="2.jpg" alt="朋友照片2">
                 </div>
                 <div class="photo-item">
-                    <img src="img/4.jpg" alt="朋友照片3">
+                    <img src="4.jpg" alt="朋友照片3">
                 </div>
                 <div class="photo-item">
-                    <img src="img/5.jpg" alt="朋友照片4">
+                    <img src="5.jpg" alt="朋友照片4">
                 </div>
                 <div class="photo-item">
-                    <img src="img/6.jpg" alt="朋友照片5">
+                    <img src="6.jpg" alt="朋友照片5">
                 </div>
                 <div class="photo-item">
-                    <img src="img/3.jpg" alt="朋友照片6">
+                    <img src="3.jpg" alt="朋友照片6">
                 </div>
             </div>
             
